fix(input color): bug on ios safari (#393)

--- a/packages/components/src/Input/Input.scss
+++ b/packages/components/src/Input/Input.scss
@@ -270,7 +270,10 @@
     width: 42px;
 
     .#{$prefix}--input--color {
+      border: 0;
+      border-radius: 0;
       height: 100%;
+      width: 100%;
     }
   }
 
